# brillion

./: .env.example  .gitignore  Note  README.me
backend/: pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 67c7854652fa_add_fund_type_to_categories.py  a663b2a72167_add_fund_type_to_categories.py  b2a1c0d9f4e2_add_to_account_id_to_transactions.py  c9f05bde1c1a_initial_tables.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: __init__.py  account.py  bank.py  category.py  monthly_balance.py  project.py  transaction.py
backend/app/routers/: accounts.py  banks.py  categories.py  import_statement.py  projects.py  summary.py  transactions.py
backend/app/schemas/: account.py  bank.py  category.py  project.py  transaction.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: banks.ts  client.ts  import.ts  summary.ts  transactions.ts
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/components/ui/: CurrencyInput.tsx
frontend/src/hooks/: useBanks.ts  useCategories.ts  useSummary.ts  useTransactions.ts
frontend/src/pages/accounts/: AccountForm.tsx  Accounts.tsx
frontend/src/pages/dashboard/: Dashboard.tsx
frontend/src/pages/projects/: ProjectDetail.tsx  ProjectForm.tsx  Projects.tsx
frontend/src/pages/reports/: MonthlyReport.tsx
frontend/src/pages/transactions/: ImportStatement.tsx  TransactionForm.tsx  Transactions.tsx
frontend/src/types/: index.ts
frontend/src/utils/: index.ts
